k8s/expose-external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: codemonsters-website
  namespace: default
spec:
  type: ExternalName
  externalName: codemonsters-website.codemonsters.svc.cluster.local
