k8s/k8s-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules-codemonsters
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: codemonsters
spec:
  rules:
    - host: codemonsters.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codemonsters-website
                port:
                  number: 80
